syntax = "proto3";
package user;
option go_package = "/pb";

service UserToRest{
    rpc Register(RegisterReq) returns (RegisterResp);
    rpc Login(LoginReq) returns (LoginResp);
    rpc GetAllUser(Req) returns (GetAllResp);
    rpc GetUserDetail(DetailReq) returns (UserDetailResp);
    rpc TopUp(TopUpReq) returns (TopUpResp);
    rpc EditDataUser(EditReq) returns (EditResp);
}

// for register
message RegisterReq{
    string username = 1;
    string email = 2;
    string password = 3;
    string role = 4;
}

message RegisterResp{
    uint64 user_id = 1;
    string username = 2;
    string email = 3;
    double deposit = 4;
}

// for login
message LoginReq{
    string email = 1 ;
    string password = 2;
}

message LoginResp{
    string token = 1;
}

// for get all user
message Req {

}

message GetAllResp {
    repeated UserDetail list = 1;
}

message UserDetail {
    uint64 user_id = 1;
    string username = 2;
    string email = 3;
    double deposit = 4;
    string fname = 5;
    string lname = 6;
    string address = 7;
    int64 age = 8;
    string phone_number = 9;
    string profile_picture_url = 10;
}

// for detailed user
message DetailReq {
    uint64 user_id = 1;
}

message UserDetailResp {
    uint64 user_id = 1;
    string username = 2;
    string email = 3;
    double deposit = 4;
    string fname = 5;
    string lname = 6;
    string address = 7;
    int64 age = 8;
    string phone_number = 9;
    string profile_picture_url = 10;
}

// for top up 
message TopUpReq {
    double amount = 1;
    uint64 user_id = 2;
}

message TopUpResp {
    double balance =1;
}

// for edit user data
message EditReq {
    string username = 1;
    string fname = 2;
    string lname = 3;
    string address = 4;
    int64 age = 5;
    string phone_number = 6;
    string profile_picture_url = 7;
    uint64 user_id = 8;
}

message EditResp {
    uint64 user_id = 1;
    string username = 2;
    string email = 3;
    double deposit = 4;
    string fname = 5;
    string lname = 6;
    string address = 7;
    int64 age = 8;
    string phone_number = 9;
    string profile_picture_url = 10;
}